# quick-dirty-wrong-opencl

./: .gitattributes  .gitignore  CMakeLists.txt  main.cl  main.cpp
dependencies/: stb_image.h
src/: Device.cpp  Device.h
